--- a/src/index.html
+++ b/src/index.html
@@ -113,6 +113,59 @@
         </div>
     </header>
 
+    <!-- Explore Head section -->
+
+    <section id="explore-head-section">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <div class="py-5">
+                        <h1 class="display-4">Explore</h1>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti deserunt,
+                            est eum explicabo facere ipsa</p>
+                        <a href="#" class="btn btn-outline-secondary">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Explore section -->
+
+    <section id="explore-section" class="bg-light text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/explore-section1.jpg" alt=""
+                         class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Explore & Connect</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eum harum illum in
+                        labore nesciunt odit quae quidem repudiandae suscipit, tenetur veritatis voluptatem.</p>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
