--- a/src/index.html
+++ b/src/index.html
@@ -166,6 +166,114 @@
         </div>
     </section>
 
+    <!--Create Head section -->
+
+    <section id="create-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <div class="py-5">
+                        <h1 class="display-4">Create</h1>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti deserunt,
+                            est eum explicabo facere ipsa</p>
+                        <a href="#" class="btn btn-outline-dark">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Create section -->
+
+    <section id="create-section" class="py-5">
+        <div class="container">
+            <div class="row">
+
+                <div class="col-md-6">
+                    <h3>Create your Passion</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eum harum illum in
+                        labore nesciunt odit quae quidem repudiandae suscipit, tenetur veritatis voluptatem.</p>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/create-section1.jpg" alt=""
+                         class="img-fluid mb-3 rounded-circle">
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!--Share Head section -->
+
+    <section id="share-head-section" class="bg-primary">
+        <div class="container">
+            <div class="row">
+                <div class="col text-center">
+                    <div class="py-5">
+                        <h1 class="display-4">Share</h1>
+                        <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aut deleniti deserunt,
+                            est eum explicabo facere ipsa</p>
+                        <a href="#" class="btn btn-outline-dark">Find Out More</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Share section -->
+
+    <section id="share-section" class="bg-light text-muted py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <img src="img/share-section1.jpg" alt=""
+                         class="img-fluid mb-3 rounded-circle">
+                </div>
+                <div class="col-md-6">
+                    <h3>Share what you Create</h3>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto beatae eum harum illum in
+                        labore nesciunt odit quae quidem repudiandae suscipit, tenetur veritatis voluptatem.</p>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                    <div class="d-flex flex-row">
+                        <div class="p-4 align-self-start">
+                            <i class="fa fa-check"></i>
+                        </div>
+                        <div class="p-4 align-self-end">
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Autem eos exercitationem
+                            obcaecati qui quod sunt!
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+
 
     <script src="js/jquery.min.js"></script>
     <script src="js/popper.min.js"></script>
